[gd_scene load_steps=15 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/mover.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/goal.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Early GameBoy.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/box.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/control_fade.gd" type="Script" id=6]
[ext_resource path="res://scripts/level_manager.gd" type="Script" id=7]
[ext_resource path="res://shaders/forest.tres" type="Material" id=8]
[ext_resource path="res://sounds/win.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/fail.wav" type="AudioStream" id=10]

[sub_resource type="AudioStreamSample" id=5]
data = PoolByteArray( 227, 24, 176, 24, 126, 24, 76, 24, 27, 24, 233, 23, 185, 23, 136, 23, 88, 23, 40, 23, 249, 22, 202, 22, 156, 22, 110, 22, 64, 22, 18, 22, 229, 21, 185, 21, 140, 21, 96, 21, 53, 21, 10, 21, 223, 20, 180, 20, 138, 20, 96, 20, 54, 20, 13, 20, 228, 19, 187, 19, 147, 19, 107, 19, 68, 19, 28, 19, 245, 18, 207, 18, 168, 18, 90, 243, 213, 224, 21, 225, 84, 225, 147, 225, 209, 225, 14, 226, 76, 226, 136, 226, 196, 226, 0, 227, 59, 227, 118, 227, 176, 227, 234, 227, 35, 228, 92, 228, 148, 228, 204, 228, 4, 229, 59, 229, 114, 229, 168, 229, 222, 229, 19, 230, 72, 230, 124, 230, 176, 230, 228, 230, 23, 231, 74, 231, 125, 231, 175, 231, 224, 231, 17, 232, 66, 232, 115, 232, 163, 232, 211, 232, 2, 233, 49, 233, 95, 233, 141, 233, 187, 233, 233, 233, 22, 234, 67, 234, 111, 234, 155, 234, 199, 234, 242, 234, 29, 235, 72, 235, 114, 235, 156, 235, 197, 235, 239, 235, 24, 236, 64, 236, 105, 236, 145, 236, 184, 236, 224, 236, 7, 237, 45, 237, 84, 237, 122, 237, 160, 237, 197, 237, 234, 237, 15, 238, 52, 238, 88, 238, 124, 238, 160, 238, 195, 238, 231, 238, 9, 239, 44, 239, 78, 239, 113, 239, 146, 239, 180, 239, 213, 239, 246, 239, 23, 240, 55, 240, 88, 240, 119, 240, 151, 240, 183, 240, 214, 240, 245, 240, 19, 241, 50, 241, 80, 241, 110, 241, 140, 241, 169, 241, 199, 241, 228, 241, 0, 242, 29, 242, 57, 242, 85, 242, 113, 242, 141, 242, 168, 242, 196, 242, 223, 242, 250, 242, 20, 243, 46, 243, 73, 243, 99, 243, 124, 243, 150, 243, 175, 243, 200, 243, 225, 243, 250, 243, 113, 25, 165, 37, 88, 37, 12, 37, 192, 36, 117, 36, 43, 36, 225, 35, 152, 35, 79, 35, 7, 35, 192, 34, 121, 34, 51, 34, 237, 33, 168, 33, 99, 33, 31, 33, 219, 32, 152, 32, 86, 32, 20, 32, 210, 31, 145, 31, 81, 31, 17, 31, 209, 30, 147, 30, 84, 30, 22, 30, 217, 29, 156, 29, 96, 29, 36, 29, 232, 28, 173, 28, 115, 28, 189, 15, 82, 234, 126, 234, 170, 234, 214, 234, 1, 235, 44, 235, 86, 235, 128, 235, 170, 235, 212, 235, 253, 235, 38, 236, 78, 236, 118, 236, 158, 236, 198, 236, 237, 236, 20, 237, 59, 237, 97, 237, 135, 237, 173, 237, 210, 237, 247, 237, 28, 238, 64, 238, 101, 238, 137, 238, 172, 238, 208, 238, 243, 238, 21, 239, 56, 239, 90, 239, 124, 239, 158, 239, 191, 239, 224, 239, 1, 240, 34, 240, 66, 240, 99, 240, 130, 240, 162, 240, 193, 240, 224, 240, 255, 240, 30, 241, 60, 241, 90, 241, 120, 241, 150, 241, 179, 241, 209, 241, 238, 241, 10, 242, 39, 242, 67, 242, 95, 242, 123, 242, 150, 242, 178, 242, 205, 242, 232, 242, 3, 243, 29, 243, 55, 243, 82, 243, 107, 243, 133, 243, 159, 243, 184, 243, 209, 243, 234, 243, 2, 244, 27, 244, 51, 244, 75, 244, 99, 244, 123, 244, 146, 244, 170, 244, 193, 244, 216, 244, 239, 244, 5, 245, 28, 245, 50, 245, 72, 245, 94, 245, 115, 245, 137, 245, 158, 245, 180, 245, 201, 245, 221, 245, 242, 245, 7, 246, 27, 246, 47, 246, 67, 246, 87, 246, 107, 246, 126, 246, 146, 246, 165, 246, 184, 246, 203, 246, 222, 246, 240, 246, 3, 247, 21, 247, 39, 247, 58, 247, 75, 247, 93, 247, 111, 247, 128, 247, 146, 247, 163, 247, 106, 10, 101, 41, 17, 41, 189, 40, 106, 40, 23, 40, 197, 39, 116, 39, 36, 39, 212, 38, 133, 38, 54, 38, 232, 37, 155, 37, 78, 37, 2, 37, 182, 36, 107, 36, 33, 36, 215, 35, 142, 35, 70, 35, 254, 34, 182, 34, 111, 34, 41, 34, 227, 33, 158, 33, 90, 33, 22, 33, 210, 32, 143, 32, 77, 32, 11, 32, 201, 31, 136, 31, 72, 31, 8, 31, 54, 243, 28, 237, 67, 237, 105, 237, 143, 237, 181, 237, 218, 237, 255, 237, 36, 238, 72, 238, 109, 238, 144, 238, 180, 238, 215, 238, 250, 238, 29, 239, 64, 239, 98, 239, 132, 239, 165, 239, 199, 239, 232, 239, 9, 240, 41, 240, 74, 240, 106, 240, 137, 240, 169, 240, 200, 240, 231, 240, 6, 241, 37, 241, 67, 241, 97, 241, 127, 241, 157, 241, 186, 241, 215, 241, 244, 241, 17, 242, 45, 242, 73, 242, 101, 242, 129, 242, 157, 242, 184, 242, 211, 242, 238, 242, 9, 243, 35, 243, 61, 243, 87, 243, 113, 243, 139, 243, 164, 243, 189, 243, 214, 243, 239, 243, 8, 244, 32, 244, 57, 244, 81, 244, 104, 244, 128, 244, 152, 244, 175, 244, 198, 244, 221, 244, 244, 244, 10, 245, 32, 245, 55, 245, 77, 245, 99, 245, 120, 245, 142, 245, 163, 245, 184, 245, 205, 245, 226, 245, 247, 245, 11, 246, 31, 246, 52, 246, 72, 246, 91, 246, 111, 246, 131, 246, 150, 246, 169, 246, 188, 246, 207, 246, 226, 246, 245, 246, 7, 247, 25, 247, 43, 247, 61, 247, 79, 247, 97, 247, 115, 247, 132, 247, 149, 247, 167, 247, 184, 247, 201, 247, 217, 247, 234, 247, 250, 247, 11, 248, 27, 248, 43, 248, 59, 248, 75, 248, 91, 248, 106, 248, 122, 248, 137, 248, 152, 248, 168, 248, 183, 248, 140, 42, 53, 42, 223, 41, 138, 41, 53, 41, 225, 40, 141, 40, 58, 40, 232, 39, 151, 39, 70, 39, 246, 38, 166, 38, 88, 38, 9, 38, 188, 37, 111, 37, 34, 37, 215, 36, 139, 36, 65, 36, 247, 35, 173, 35, 101, 35, 28, 35, 213, 34, 142, 34, 71, 34, 1, 34, 188, 33, 119, 33, 51, 33, 239, 32, 172, 32, 105, 32, 39, 32, 229, 31, 180, 6, 208, 237, 245, 237, 26, 238, 62, 238, 99, 238, 135, 238, 170, 238, 206, 238, 241, 238, 19, 239, 54, 239, 88, 239, 122, 239, 156, 239, 189, 239, 223, 239, 0, 240, 32, 240, 65, 240, 97, 240, 129, 240, 160, 240, 192, 240, 223, 240, 254, 240, 28, 241, 59, 241, 89, 241, 119, 241, 148, 241, 178, 241, 207, 241, 236, 241, 9, 242, 37, 242, 65, 242, 94, 242, 121, 242, 149, 242, 176, 242, 203, 242, 230, 242, 1, 243, 28, 243, 54, 243, 80, 243, 106, 243, 132, 243, 157, 243, 182, 243, 208, 243, 232, 243, 1, 244, 26, 244, 50, 244, 74, 244, 98, 244, 122, 244, 145, 244, 168, 244, 192, 244, 215, 244, 237, 244, 4, 245, 26, 245, 49, 245, 71, 245, 93, 245, 114, 245, 136, 245, 157, 245, 178, 245, 199, 245, 220, 245, 241, 245, 5, 246, 26, 246, 46, 246, 66, 246, 86, 246, 106, 246, 125, 246, 145, 246, 164, 246, 183, 246, 202, 246, 221, 246, 239, 246, 2, 247, 20, 247, 38, 247, 56, 247, 74, 247, 92, 247, 110, 247, 127, 247, 145, 247, 162, 247, 179, 247, 196, 247, 213, 247, 229, 247, 246, 247, 6, 248, 23, 248, 39, 248, 55, 248, 71, 248, 86, 248, 102, 248, 118, 248, 133, 248, 148, 248, 163, 248, 178, 248, 193, 248, 208, 248, 223, 248, 237, 248, 252, 248, 50, 24, 159, 42, 72, 42, 242, 41, 156, 41, 71, 41, 243, 40, 160, 40, 77, 40, 250, 39, 169, 39, 88, 39, 8, 39, 184, 38, 105, 38, 27, 38, 205, 37, 128, 37, 51, 37, 231, 36, 156, 36, 81, 36, 7, 36, 190, 35, 117, 35, 44, 35, 228, 34, 157, 34, 87, 34, 17, 34, 203, 33, 134, 33, 66, 33, 254, 32, 186, 32, 120, 32, 53, 32, 181, 25, 249, 237, 29, 238, 66, 238, 102, 238, 138, 238, 174, 238, 209, 238, 244, 238, 23, 239, 57, 239, 92, 239, 126, 239, 159, 239, 193, 239, 226, 239, 3, 240, 35, 240, 68, 240, 100, 240, 132, 240, 163, 240, 195, 240, 226, 240, 1, 241, 31, 241, 62, 241, 92, 241, 122, 241, 151, 241, 181, 241, 210, 241, 239, 241, 12, 242, 40, 242, 68, 242, 96, 242, 124, 242, 152, 242, 179, 242, 206, 242, 233, 242, 4, 243, 30, 243, 57, 243, 83, 243, 109, 243, 134, 243, 160, 243, 185, 243, 210, 243, 235, 243, 4, 244, 28, 244, 52, 244, 76, 244, 100, 244, 124, 244, 147, 244, 171, 244, 194, 244, 217, 244, 240, 244, 6, 245, 29, 245, 51, 245, 73, 245, 95, 245, 116, 245, 138, 245, 159, 245, 180, 245, 201, 245, 222, 245, 243, 245, 7, 246, 28, 246, 48, 246, 68, 246, 88, 246, 108, 246, 127, 246, 147, 246, 166, 246, 185, 246, 204, 246, 223, 246, 241, 246, 4, 247, 22, 247, 40, 247, 58, 247, 76, 247, 94, 247, 112, 247, 129, 247, 146, 247, 164, 247, 181, 247, 198, 247, 214, 247, 231, 247, 248, 247, 8, 248, 24, 248, 40, 248, 56, 248, 72, 248, 88, 248, 104, 248, 119, 248, 134, 248, 150, 248, 165, 248, 180, 248, 195, 248, 210, 248, 224, 248, 239, 248, 253, 248, 11, 249, 149, 5, 213, 42, 125, 42, 39, 42, 209, 41, 123, 41, 39, 41, 211, 40, 127, 40, 45, 40, 219, 39, 137, 39, 57, 39, 233, 38, 153, 38, 74, 38, 252, 37, 175, 37, 98, 37, 22, 37, 202, 36, 127, 36, 52, 36, 234, 35, 161, 35, 88, 35, 16, 35, 201, 34, 130, 34, 59, 34, 245, 33, 176, 33, 107, 33, 39, 33, 228, 32, 160, 32, 94, 32, 28, 32, 124, 250, 31, 238, 67, 238, 104, 238, 140, 238, 175, 238, 211, 238, 246, 238, 24, 239, 59, 239, 93, 239, 127, 239, 161, 239, 194, 239, 227, 239, 4, 240, 37, 240, 69, 240, 101, 240, 133, 240, 165, 240, 196, 240, 227, 240, 2, 241, 33, 241, 63, 241, 93, 241, 123, 241, 153, 241, 182, 241, 211, 241, 240, 241, 13, 242, 41, 242, 69, 242, 97, 242, 125, 242, 153, 242, 180, 242, 207, 242, 234, 242, 5, 243, 31, 243, 58, 243, 84, 243, 110, 243, 135, 243, 161, 243, 186, 243, 211, 243, 236, 243, 5, 244, 29, 244, 53, 244, 77, 244, 101, 244, 125, 244, 148, 244, 172, 244, 195, 244, 218, 244, 241, 244, 7, 245, 29, 245, 52, 245, 74, 245, 96, 245, 117, 245, 139, 245, 160, 245, 181, 245, 202, 245, 223, 245, 244, 245, 8, 246, 29, 246, 49, 246, 69, 246, 89, 246, 108, 246, 128, 246, 147, 246, 167, 246, 186, 246, 205, 246, 223, 246, 242, 246, 4, 247, 23, 247, 41, 247, 59, 247, 77, 247, 95, 247, 112, 247, 130, 247, 147, 247, 164, 247, 181, 247, 198, 247, 215, 247, 232, 247, 248, 247, 9, 248, 25, 248, 41, 248, 57, 248, 73, 248, 89, 248, 104, 248, 120, 248, 135, 248, 150, 248, 165, 248, 181, 248, 195, 248, 210, 248, 225, 248, 239, 248, 254, 248, 12, 249, 26, 249, 188, 36, 164, 42, 77, 42, 247, 41, 161, 41, 76, 41, 248, 40, 164, 40, 81, 40, 255, 39, 173, 39, 92, 39, 12, 39, 188, 38, 109, 38, 31, 38, 209, 37, 132, 37, 55, 37, 235, 36, 160, 36, 85, 36, 11, 36, 193, 35, 120, 35, 48, 35, 232, 34, 161, 34, 90, 34, 20, 34, 207, 33, 138, 33, 69, 33, 1, 33, 190, 32, 123, 32, 57, 32, 65, 13, 22, 238, 58, 238, 94, 238, 130, 238, 166, 238, 201, 238, 237, 238, 15, 239, 50, 239, 84, 239, 118, 239, 152, 239, 186, 239, 219, 239, 252, 239, 28, 240, 61, 240, 93, 240, 125, 240, 157, 240, 188, 240, 219, 240, 250, 240, 25, 241, 55, 241, 85, 241, 115, 241, 145, 241, 174, 241, 204, 241, 233, 241, 5, 242, 34, 242, 62, 242, 90, 242, 118, 242, 146, 242, 173, 242, 200, 242, 227, 242, 254, 242, 25, 243, 51, 243, 77, 243, 103, 243, 129, 243, 154, 243, 180, 243, 205, 243, 230, 243, 254, 243, 23, 244, 47, 244, 71, 244, 95, 244, 119, 244, 142, 244, 166, 244, 189, 244, 212, 244, 235, 244, 1, 245, 24, 245, 46, 245, 68, 245, 90, 245, 112, 245, 133, 245, 155, 245, 176, 245, 197, 245, 218, 245, 239, 245, 3, 246, 23, 246, 44, 246, 64, 246, 84, 246, 103, 246, 123, 246, 142, 246, 162, 246, 181, 246, 200, 246, 219, 246, 237, 246, 0, 247, 18, 247, 36, 247, 54, 247, 72, 247, 90, 247, 108, 247, 125, 247, 143, 247, 160, 247, 177, 247, 194, 247, 211, 247, 227, 247, 244, 247, 4, 248, 21, 248, 37, 248, 53, 248, 69, 248, 85, 248, 100, 248, 116, 248, 131, 248, 146, 248, 162, 248, 177, 248, 192, 248, 206, 248, 221, 248, 236, 248, 250, 248, 8, 249, 23, 249, 21, 18, 198, 42, 111, 42, 24, 42, 195, 41, 109, 41, 25, 41, 197, 40, 114, 40, 31, 40, 205, 39, 124, 39, 43, 39, 220, 38, 140, 38, 62, 38, 240, 37, 162, 37, 85, 37, 9, 37, 190, 36, 115, 36, 40, 36, 222, 35, 149, 35, 77, 35, 5, 35, 189, 34, 118, 34, 48, 34, 234, 33, 165, 33, 96, 33, 28, 33, 216, 32, 149, 32, 83, 32, 17, 32, 9, 238, 46, 238, 82, 238, 118, 238, 154, 238, 189, 238, 225, 238, 4, 239, 38, 239, 73, 239, 107, 239, 141, 239, 174, 239, 207, 239, 241, 239, 17, 240, 50, 240, 82, 240, 114, 240, 146, 240, 177, 240, 209, 240, 240, 240, 14, 241, 45, 241, 75, 241, 105, 241, 135, 241, 164, 241, 194, 241, 223, 241, 252, 241, 24, 242, 53, 242, 81, 242, 109, 242, 136, 242, 164, 242, 191, 242, 218, 242, 245, 242, 16, 243, 42, 243, 68, 243, 94, 243, 120, 243, 146, 243, 171, 243, 196, 243, 221, 243, 246, 243, 14, 244, 39, 244, 63, 244, 87, 244, 111, 244, 134, 244, 158, 244, 181, 244, 204, 244, 227, 244, 250, 244, 16, 245, 38, 245, 61, 245, 83, 245, 104, 245, 126, 245, 147, 245, 169, 245, 190, 245, 211, 245, 231, 245, 252, 245, 16, 246, 37, 246, 57, 246, 77, 246, 97, 246, 116, 246, 136, 246, 155, 246, 174, 246, 193, 246, 212, 246, 231, 246, 249, 246, 12, 247, 30, 247, 48, 247, 66, 247, 84, 247, 102, 247, 119, 247, 137, 247, 154, 247, 171, 247, 188, 247, 205, 247, 222, 247, 238, 247, 255, 247, 15, 248, 31, 248, 47, 248, 63, 248, 79, 248, 95, 248, 110, 248, 126, 248, 141, 248, 156, 248, 172, 248, 186, 248, 201, 248, 216, 248, 231, 248, 245, 248, 4, 249, 18, 249, 94, 255, 232, 42, 144, 42, 57, 42, 227, 41, 142, 41, 57, 41, 229, 40, 145, 40, 62, 40, 236, 39, 155, 39, 74, 39, 250, 38, 170, 38, 91, 38, 13, 38, 191, 37, 114, 37, 38, 37, 218, 36, 143, 36, 68, 36, 250, 35, 177, 35, 104, 35, 32, 35, 216, 34, 145, 34, 74, 34, 5, 34, 191, 33, 122, 33, 54, 33, 242, 32, 175, 32, 108, 32, 42, 32, 192, 0, 32, 238, 69, 238, 105, 238, 141, 238, 176, 238, 212, 238, 247, 238, 26, 239, 60, 239, 94, 239, 128, 239, 162, 239, 195, 239, 228, 239, 5, 240, 38, 240, 70, 240, 102, 240, 134, 240, 166, 240, 197, 240, 228, 240, 3, 241, 34, 241, 64, 241, 94, 241, 124, 241, 154, 241, 183, 241, 212, 241, 241, 241, 14, 242, 42, 242, 70, 242, 98, 242, 126, 242, 154, 242, 181, 242, 208, 242, 235, 242, 6, 243, 32, 243, 59, 243, 85, 243, 111, 243, 136, 243, 162, 243, 187, 243, 212, 243, 237, 243, 5, 244, 30, 244, 54, 244, 78, 244, 102, 244, 126, 244, 149, 244, 173, 244, 196, 244, 219, 244, 241, 244, 8, 245, 30, 245, 52, 245, 75, 245, 96, 245, 118, 245, 140, 245, 161, 245, 182, 245, 203, 245, 224, 245, 245, 245, 9, 246, 29, 246, 50, 246, 70, 246, 89, 246, 109, 246, 129, 246, 148, 246, 167, 246, 186, 246, 205, 246, 224, 246, 243, 246, 5, 247, 23, 247, 42, 247, 60, 247, 78, 247, 95, 247, 113, 247, 130, 247, 148, 247, 165, 247, 182, 247, 199, 247, 216, 247, 232, 247, 249, 247, 9, 248, 25, 248, 42, 248, 58, 248, 73, 248, 89, 248, 105, 248, 120, 248, 136, 248, 151, 248, 166, 248, 181, 248, 196, 248, 211, 248, 225, 248, 240, 248, 254, 248, 13, 249, 27, 249, 135, 30, 177, 42, 90, 42, 4, 42, 174, 41, 89, 41, 4, 41, 177, 40, 94, 40, 11, 40, 185, 39, 104, 39, 24, 39, 200, 38, 121, 38, 43, 38, 221, 37, 143, 37, 67, 37, 247, 36, 171, 36, 96, 36, 22, 36, 205, 35, 131, 35, 59, 35, 243, 34, 172, 34, 101, 34, 31, 34, 217, 33, 148, 33, 80, 33, 12, 33, 200, 32, 133, 32, 67, 32, 134, 19, 19, 238, 55, 238, 92, 238, 128, 238, 163, 238, 199, 238, 234, 238, 13, 239, 47, 239, 82, 239, 116, 239, 149, 239, 183, 239, 216, 239, 249, 239, 26, 240, 58, 240, 90, 240, 122, 240, 154, 240, 186, 240, 217, 240, 248, 240, 22, 241, 53, 241, 83, 241, 113, 241, 143, 241, 172, 241, 201, 241, 230, 241, 3, 242, 32, 242, 60, 242, 88, 242, 116, 242, 144, 242, 171, 242, 198, 242, 225, 242, 252, 242, 23, 243, 49, 243, 75, 243, 101, 243, 127, 243, 152, 243, 178, 243, 203, 243, 228, 243, 252, 243, 21, 244, 45, 244, 69, 244, 93, 244, 117, 244, 140, 244, 164, 244, 187, 244, 210, 244, 233, 244, 255, 244, 22, 245, 44, 245, 66, 245, 88, 245, 110, 245, 132, 245, 153, 245, 174, 245, 195, 245, 216, 245, 237, 245, 1, 246, 22, 246, 42, 246, 62, 246, 82, 246, 102, 246, 121, 246, 141, 246, 160, 246, 179, 246, 198, 246, 217, 246, 236, 246, 254, 246, 17, 247, 35, 247, 53, 247, 71, 247, 89, 247, 106, 247, 124, 247, 141, 247, 159, 247, 176, 247, 193, 247, 209, 247, 226, 247, 243, 247, 3, 248, 19, 248, 36, 248, 52, 248, 68, 248, 83, 248, 99, 248, 115, 248, 130, 248, 145, 248, 160, 248, 175, 248, 190, 248, 205, 248, 220, 248, 234, 248, 249, 248, 7, 249, 21, 249, 218, 11, 210, 42, 123, 42, 36, 42, 206, 41, 121, 41, 36, 41, 208, 40, 125, 40, 42, 40, 216, 39, 135, 39, 54, 39, 230, 38, 151, 38, 72, 38, 250, 37, 172, 37, 95, 37, 19, 37, 199, 36, 124, 36, 50, 36, 232, 35, 159, 35, 86, 35, 14, 35, 198, 34, 127, 34, 57, 34, 243, 33, 174, 33, 105, 33, 37, 33, 225, 32, 158, 32, 92, 32, 26, 32, 69, 244, 42, 238, 78, 238, 114, 238, 150, 238, 185, 238, 221, 238, 0, 239, 34, 239, 69, 239, 103, 239, 137, 239, 170, 239, 204, 239, 237, 239, 14, 240, 46, 240, 78, 240, 110, 240, 142, 240, 174, 240, 205, 240, 236, 240, 11, 241, 177, 241, 85, 242, 246, 242, 149, 243, 50, 244, 204, 244, 101, 245, 251, 245, 142, 246, 32, 247, 175, 247, 60, 248, 199, 248, 80, 249, 215, 249, 92, 250, 223, 250, 96, 251, 223, 251, 92, 252, 215, 252, 80, 253, 199, 253, 61, 254, 176, 254, 34, 255, 146, 255, 0, 0, 0, 0 )
format = 1

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[node name="Level_02" type="Node2D"]
material = ExtResource( 8 )
script = ExtResource( 7 )

[node name="MoveAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )
bus = "FX"

[node name="FailAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "FX"

[node name="WinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "FX"

[node name="TileMap" type="TileMap" parent="."]
use_parent_material = true
position = Vector2( 8, 8 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -458768, 12, 0, -458767, 12, 0, -458766, 12, 0, -458765, 12, 0, -458764, 12, 0, -458763, 12, 0, -458762, 12, 0, -458761, 12, 0, -458760, 12, 0, -458759, 12, 0, -458758, 12, 0, -458757, 12, 0, -458756, 12, 0, -458755, 12, 0, -458754, 12, 0, -458753, 12, 0, -524288, 12, 0, -524287, 12, 0, -524286, 12, 0, -524285, 12, 0, -524284, 12, 0, -524283, 12, 0, -524282, 12, 0, -524281, 12, 0, -524280, 12, 0, -524279, 12, 0, -524278, 12, 0, -524277, 12, 0, -524276, 12, 0, -524275, 12, 0, -524274, 12, 0, -393232, 12, 0, -393231, 12, 0, -393230, 12, 0, -393229, 12, 0, -393228, 12, 0, -393227, 12, 0, -393226, 12, 0, -393225, 12, 0, -393224, 12, 0, -393223, 12, 0, -393222, 12, 0, -393221, 12, 0, -393220, 12, 0, -393219, 12, 0, -393218, 12, 0, -393217, 12, 0, -458752, 12, 0, -458751, 12, 0, -458750, 12, 0, -458749, 12, 0, -458748, 12, 0, -458747, 12, 0, -458746, 12, 0, -458745, 12, 0, -458744, 12, 0, -458743, 12, 0, -458742, 12, 0, -458741, 12, 0, -458740, 12, 0, -458739, 12, 0, -458738, 12, 0, -327696, 12, 0, -327695, 12, 0, -327694, 12, 0, -327693, 12, 0, -327692, 12, 0, -327691, 12, 0, -327690, 12, 0, -327689, 12, 0, -327688, 12, 0, -327687, 12, 0, -327686, 12, 0, -327685, 12, 0, -327684, 12, 0, -327683, 12, 0, -327682, 12, 0, -327681, 12, 0, -393216, 12, 0, -393215, 12, 0, -393214, 12, 0, -393213, 12, 0, -393212, 12, 0, -393211, 12, 0, -393210, 12, 0, -393209, 12, 0, -393208, 12, 0, -393207, 12, 0, -393206, 12, 0, -393205, 12, 0, -393204, 12, 0, -393203, 12, 0, -393202, 12, 0, -262160, 12, 0, -262159, 12, 0, -262158, 12, 0, -262157, 12, 0, -262156, 12, 0, -262155, 12, 0, -262154, 12, 0, -262153, 12, 0, -262152, 12, 0, -262151, 12, 0, -262150, 12, 0, -262149, 12, 0, -262148, 12, 0, -262147, 12, 0, -262146, 12, 0, -262145, 12, 0, -327680, 12, 0, -327679, 12, 0, -327678, 12, 0, -327677, 12, 0, -327676, 12, 0, -327675, 12, 0, -327674, 12, 0, -327673, 12, 0, -327672, 12, 0, -327671, 12, 0, -327670, 12, 0, -327669, 12, 0, -327668, 12, 0, -327667, 12, 0, -327666, 12, 0, -196624, 12, 0, -196623, 12, 0, -196622, 12, 0, -196621, 12, 0, -196620, 12, 0, -196619, 12, 0, -196618, 12, 0, -196617, 12, 0, -196616, 12, 0, -196615, 12, 0, -196614, 12, 0, -196613, 4, 0, -196612, 5, 0, -196611, 5, 0, -196610, 5, 0, -196609, 5, 0, -262144, 5, 0, -262143, 5, 0, -262142, 5, 0, -262141, 6, 0, -262140, 12, 0, -262139, 12, 0, -262138, 12, 0, -262137, 12, 0, -262136, 12, 0, -262135, 12, 0, -262134, 12, 0, -262133, 12, 0, -262132, 12, 0, -262131, 12, 0, -262130, 12, 0, -131088, 12, 0, -131087, 12, 0, -131086, 12, 0, -131085, 12, 0, -131084, 12, 0, -131083, 12, 0, -131082, 12, 0, -131081, 12, 0, -131080, 12, 0, -131079, 12, 0, -131078, 12, 0, -131077, 11, 0, -131076, 12, 0, -131075, 12, 0, -131074, 12, 0, -131073, 12, 0, -196608, 12, 0, -196607, 12, 0, -196606, 12, 0, -196605, 7, 0, -196604, 12, 0, -196603, 12, 0, -196602, 12, 0, -196601, 12, 0, -196600, 12, 0, -196599, 12, 0, -196598, 12, 0, -196597, 12, 0, -196596, 12, 0, -196595, 12, 0, -196594, 12, 0, -65552, 12, 0, -65551, 12, 0, -65550, 12, 0, -65549, 12, 0, -65548, 12, 0, -65547, 12, 0, -65546, 12, 0, -65545, 12, 0, -65544, 12, 0, -65543, 12, 0, -65542, 12, 0, -65541, 11, 0, -65540, 12, 0, -65539, 12, 0, -65538, 12, 0, -65537, 12, 0, -131072, 12, 0, -131071, 12, 0, -131070, 12, 0, -131069, 7, 0, -131068, 12, 0, -131067, 12, 0, -131066, 12, 0, -131065, 12, 0, -131064, 12, 0, -131063, 12, 0, -131062, 12, 0, -131061, 12, 0, -131060, 12, 0, -131059, 12, 0, -131058, 12, 0, -16, 12, 0, -15, 12, 0, -14, 12, 0, -13, 12, 0, -12, 12, 0, -11, 12, 0, -10, 12, 0, -9, 12, 0, -8, 12, 0, -7, 12, 0, -6, 12, 0, -5, 11, 0, -4, 12, 0, -3, 12, 0, -2, 12, 0, -1, 12, 0, -65536, 12, 0, -65535, 12, 0, -65534, 12, 0, -65533, 7, 0, -65532, 12, 0, -65531, 12, 0, -65530, 12, 0, -65529, 12, 0, -65528, 12, 0, -65527, 12, 0, -65526, 12, 0, -65525, 12, 0, -65524, 12, 0, -65523, 12, 0, -65522, 12, 0, 65520, 12, 0, 65521, 12, 0, 65522, 12, 0, 65523, 12, 0, 65524, 12, 0, 65525, 12, 0, 65526, 12, 0, 65527, 12, 0, 65528, 12, 0, 65529, 12, 0, 65530, 12, 0, 65531, 11, 0, 65532, 12, 0, 65533, 12, 0, 65534, 12, 0, 65535, 12, 0, 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 7, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 12, 0, 9, 12, 0, 10, 12, 0, 11, 12, 0, 12, 12, 0, 13, 12, 0, 14, 12, 0, 131056, 12, 0, 131057, 12, 0, 131058, 12, 0, 131059, 12, 0, 131060, 12, 0, 131061, 12, 0, 131062, 12, 0, 131063, 12, 0, 131064, 12, 0, 131065, 12, 0, 131066, 12, 0, 131067, 11, 0, 131068, 12, 0, 131069, 12, 0, 131070, 12, 0, 131071, 12, 0, 65536, 12, 0, 65537, 12, 0, 65538, 12, 0, 65539, 7, 0, 65540, 12, 0, 65541, 12, 0, 65542, 12, 0, 65543, 12, 0, 65544, 12, 0, 65545, 12, 0, 65546, 12, 0, 65547, 12, 0, 65548, 12, 0, 65549, 12, 0, 65550, 12, 0, 196592, 12, 0, 196593, 12, 0, 196594, 12, 0, 196595, 12, 0, 196596, 12, 0, 196597, 12, 0, 196598, 12, 0, 196599, 12, 0, 196600, 12, 0, 196601, 12, 0, 196602, 12, 0, 196603, 10, 0, 196604, 9, 0, 196605, 9, 0, 196606, 9, 0, 196607, 9, 0, 131072, 9, 0, 131073, 9, 0, 131074, 9, 0, 131075, 8, 0, 131076, 12, 0, 131077, 12, 0, 131078, 12, 0, 131079, 12, 0, 131080, 12, 0, 131081, 12, 0, 131082, 12, 0, 131083, 12, 0, 131084, 12, 0, 131085, 12, 0, 131086, 12, 0, 262128, 12, 0, 262129, 12, 0, 262130, 12, 0, 262131, 12, 0, 262132, 12, 0, 262133, 12, 0, 262134, 12, 0, 262135, 12, 0, 262136, 12, 0, 262137, 12, 0, 262138, 12, 0, 262139, 12, 0, 262140, 12, 0, 262141, 12, 0, 262142, 12, 0, 262143, 12, 0, 196608, 12, 0, 196609, 12, 0, 196610, 12, 0, 196611, 12, 0, 196612, 12, 0, 196613, 12, 0, 196614, 12, 0, 196615, 12, 0, 196616, 12, 0, 196617, 12, 0, 196618, 12, 0, 196619, 12, 0, 196620, 12, 0, 196621, 12, 0, 196622, 12, 0, 327664, 12, 0, 327665, 12, 0, 327666, 12, 0, 327667, 12, 0, 327668, 12, 0, 327669, 12, 0, 327670, 12, 0, 327671, 12, 0, 327672, 12, 0, 327673, 12, 0, 327674, 12, 0, 327675, 12, 0, 327676, 12, 0, 327677, 12, 0, 327678, 12, 0, 327679, 12, 0, 262144, 12, 0, 262145, 12, 0, 262146, 12, 0, 262147, 12, 0, 262148, 12, 0, 262149, 12, 0, 262150, 12, 0, 262151, 12, 0, 262152, 12, 0, 262153, 12, 0, 262154, 12, 0, 262155, 12, 0, 262156, 12, 0, 262157, 12, 0, 262158, 12, 0, 393200, 12, 0, 393201, 12, 0, 393202, 12, 0, 393203, 12, 0, 393204, 12, 0, 393205, 12, 0, 393206, 12, 0, 393207, 12, 0, 393208, 12, 0, 393209, 12, 0, 393210, 12, 0, 393211, 12, 0, 393212, 12, 0, 393213, 12, 0, 393214, 12, 0, 393215, 12, 0, 327680, 12, 0, 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 12, 0, 327689, 12, 0, 327690, 12, 0, 327691, 12, 0, 327692, 12, 0, 327693, 12, 0, 327694, 12, 0, 458736, 12, 0, 458737, 12, 0, 458738, 12, 0, 458739, 12, 0, 458740, 12, 0, 458741, 12, 0, 458742, 12, 0, 458743, 12, 0, 458744, 12, 0, 458745, 12, 0, 458746, 12, 0, 458747, 12, 0, 458748, 12, 0, 458749, 12, 0, 458750, 12, 0, 458751, 12, 0, 393216, 12, 0, 393217, 12, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, 393222, 12, 0, 393223, 12, 0, 393224, 12, 0, 393225, 12, 0, 393226, 12, 0, 393227, 12, 0, 393228, 12, 0, 393229, 12, 0, 393230, 12, 0 )

[node name="Goal" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, -16 )

[node name="Mover" parent="." instance=ExtResource( 2 )]
position = Vector2( -32, -16 )
move_direction = Vector2( 1, 0 )
move_action = "Right"

[node name="Mover2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 16 )
move_direction = Vector2( 0, -1 )
move_action = "Up"

[node name="Box" parent="." instance=ExtResource( 5 )]

[node name="LevelIndicator" type="CenterContainer" parent="."]
use_parent_material = true
margin_top = 64.0
margin_bottom = 64.0
use_top_left = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelIndicator"]
use_parent_material = true
margin_left = -34.0
margin_top = -5.0
margin_right = 34.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "Level 1-2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = 32.0
use_top_left = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
use_parent_material = true
margin_left = -4.0
margin_top = -5.0
margin_right = 4.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -16.0
margin_right = -48.0
margin_bottom = -16.0
use_top_left = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer2"]
use_parent_material = true
margin_left = -4.0
margin_top = -5.0
margin_right = 4.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_bottom = -64.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer3"]
use_parent_material = true
margin_left = -66.0
margin_top = -5.0
margin_right = 66.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "PRESS R TO RESTART"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="moved" from="Mover" to="CenterContainer2" method="fade"]
[connection signal="moved" from="Mover2" to="CenterContainer" method="fade"]
